# rag-service

./: main.py  pyproject.toml  rag.py  schemas.py  settings.py
data/bank_rules/: approval.txt  complaint.txt  information.txt  norifications.txt  partnership.txt  regulatory.txt
